--- a/pokeWho.css
+++ b/pokeWho.css
@@ -25,8 +25,8 @@
 	height: 30px;
 	margin: 0px;
 	padding: 0px;
-	/*padding-top: 2px;*/
-	/*margin-bottom: 5px;*/
+	padding-top: 2px;
+	margin-bottom: 5px;
 }
 
 
