--- a/pokeWho.css
+++ b/pokeWho.css
@@ -36,7 +36,7 @@
 body {
 	background-color: #4682B4;
 	text-align: center;
-	/*font-family: "PokeFontSolid";*/
+	font-family: "PokeFontSolid";
 	font-size: 20px;
 	color: yellow;
 	text-shadow: -1px 0 blue, 0 1px blue, 1px 0 blue, 0 -1px blue;
