--- a/pokeWho.css
+++ b/pokeWho.css
@@ -1,6 +1,7 @@
 @font-face {
-	font-family: "PokeFontSolid";
-	src: url("PokeFontSolid.ttf");
+	font-family: "PokeFont";
+	font-weight: normal;
+	src: url("PokeFont.ttf");
 }
 
 * {
@@ -35,7 +36,7 @@
 body {
 	background-color: #4682B4;
 	text-align: center;
-	font-family: "PokeFontSolid";
+	font-family: "PokeFont";
 	font-size: 20px;
 	color: yellow;
 	text-shadow: -1px 0 blue, 0 1px blue, 1px 0 blue, 0 -1px blue;
@@ -43,7 +44,7 @@ body {
 
 #titleText {
 	height: 60px;
-	font-size: 40px;
+	font-size: 60px;
 	padding-top: 20px;
 }
 
