--- a/pokeWho.css
+++ b/pokeWho.css
@@ -15,7 +15,7 @@
 	border-width: 5px;
 	border-style: solid;
 	border-radius: 20px;
-	background-color: #4169E1; 
+	background-color: #4169E1 !important; 
 	overflow: hidden;
 }
 
@@ -50,7 +50,7 @@ body {
 
 #introText {
 	/*background-color: red;*/
-	width: 1000px;
+	width: 1100px;
 	height: 70px;
 	text-align: center;
 	font-size: 16px;
@@ -93,6 +93,30 @@ body {
 	height: 580px;
 }
 
+#rightOrNot {
+	position: relative;
+	background-color: gray;
+	border-top: 5px solid #000080;
+	border-bottom: 5px solid #000080;
+	width: 580px;
+	height: 90px;
+	z-index: 9999;
+	top: -350px;
+}
+
+#amIRight {
+	height: 80px;
+	width: 580px;
+	font-size: 35px;
+}
+
+#whoIsIt {
+	height: 80px;
+	width: 580px;
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
 
 /* The scoreBox: 340x80 */
 /* Note this includes both score boxes, and note that
@@ -103,7 +127,7 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 50px;
-	margin-bottom: 30px;	
+	margin-bottom: 20px;	
 }
 
 
@@ -121,14 +145,14 @@ body {
 }
 
 
-/* The genPicker: 290x140 */
+/* The genPicker: 290x155 */
 #genPicker {
 	width: 280px;
-	height: 130px;
+	height: 145px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 
@@ -148,14 +172,32 @@ body {
 }
 
 
-/* The guessBox: 260x110 */
+/* The guessBox: 260x125 */
 #guessBox {
 	width: 250px;
-	height: 100px;
+	height: 115px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+
+#guess {
+	width: 240px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 5px;
+}
+
+#submitGuess {
+	margin-top: 10px;
+	width: 100px;
+}
+
+#skip {
+	margin-top: 10px;
+	width: 100px;
 }
 
 
@@ -165,6 +207,6 @@ body {
 	height: 70px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 30px;
+	margin-top: 20px;
 	margin-bottom: 50px;
 }
